<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SCROLLER_sensor"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true">
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	    
		   <TextView
		        android:id="@+id/intro_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:paddingLeft="15dp"
		        android:paddingTop="15dp"
		        android:layout_marginBottom="-20dp"
		        android:text="intro_list" />
		   
		   <ImageView
		       android:id="@+id/image_view"
		       android:layout_width="wrap_content"
        	   android:layout_height="wrap_content"
        	   android:src="@drawable/axis_device"
        	    android:layout_marginBottom="10dp"/>
		   
		   <TextView
		        android:id="@+id/sensor_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:paddingLeft="15dp"
		        android:paddingBottom="15dp"
		        android:text="sensor_list" />
		   
		   <Button
		     android:id="@+id/accelerometer_button"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/accelerometer_button"
		     android:layout_marginBottom="-20dp"
		     android:layout_marginLeft="10dp" />

		   <TextView
		       android:id="@+id/accelerometer_text"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginBottom="-20dp"
		       android:paddingLeft="15dp"
		       android:text="accelerometer_list"
		       android:textSize="18sp" />
		   
		   <Button
		     android:id="@+id/gyroscope_button"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/gyroscope_button"
		     android:layout_marginBottom="-30dp"
		     android:layout_marginTop="30dp"
		     android:layout_marginLeft="10dp" />

		   <TextView
		       android:id="@+id/gyroscope_text"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginBottom="-20dp"
		       android:paddingLeft="15dp"
		       android:text="gyroscope_list"
		       android:textSize="18sp" />
		   
		   <Button
		     android:id="@+id/magnetometer_button"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/magnetometer_button"
		     android:layout_marginBottom="-30dp"
		     android:layout_marginTop="30dp"
		     android:layout_marginLeft="10dp" />
		   
		   <TextView
		        android:id="@+id/magnetometer_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:paddingLeft="15dp"
		        android:layout_marginBottom="-20dp"
		        android:text="magnetometer_list" />
		   
		   <Button
		     android:id="@+id/light_button"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/light_button"
		     android:layout_marginBottom="-30dp"
		     android:layout_marginTop="30dp"
		     android:layout_marginLeft="15dp" />
		   
		   <TextView
		        android:id="@+id/light_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:paddingLeft="15dp"
		        android:layout_marginBottom="-20dp"
		        android:text="light_list" />
		   
		   <Button
		     android:id="@+id/proximity_button"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/proximity_button"
		     android:layout_marginBottom="-30dp"
		     android:layout_marginTop="30dp"
		     android:layout_marginLeft="15dp" />
		   
		   <TextView
		        android:id="@+id/proximity_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:paddingLeft="15dp"
		        android:layout_marginBottom="-20dp"
		        android:text="proximity_list" />
		   
		   <Button
		     android:id="@+id/orientation_button"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/orientation_button"
		     android:layout_marginBottom="-30dp"
		     android:layout_marginTop="30dp"
		     android:layout_marginLeft="15dp" />
		   
		   <TextView
		        android:id="@+id/orientation_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:paddingLeft="15dp"
		        android:layout_marginBottom="-20dp"
		        android:text="orientation_list" />
		   
	</LinearLayout>
</ScrollView>